# signal-to-page

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: how-it-works.md  mock-mode.md  output-formats.md
prompts/: brief.txt  intent.txt  page.txt
signal_to_page/: __init__.py  cli.py  generator.py  intent.py  parser.py  research.py  scorer.py
signal_to_page/formatters/: __init__.py  json_brief.py  markdown.py
signal_to_page/mock/mock_responses/: serp_results.json
signal_to_page/mock/signal_samples/: funding_announcement.txt  job_posting.txt  linkedin_update.txt
