[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-to-page"
version = "0.1.0"
description = "Convert GTM signals into SEO pages or content briefs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.28",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
signal-to-page = "signal_to_page.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["signal_to_page*"]
